# private-music-player

./: Cargo.toml  README.md  new-password  password
files/css/: login-style.css  style.css
files/favicon/: favicon.xcf
files/js/: player.js
src/: indexer.rs  main.rs  updater.rs
