[package]
name = "private-music-server"
version = "0.1.0"
authors = ["Kevin Robert Stravers <kevin@stravers.net>"]
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-service = "2.0.2"
actix-web = { version = "4.3.1", features = [ "secure-cookies" ] }
actix-rt = "2.8.0"
chrono = "0.4.26"
derive_more = "0.99.17"
fast-logger = "0.7.1"
file-rotate = "0.7.5"
indexmap = "1.9.3"
maud = "0.25"
rand = "0.8.5"
rand_pcg = "0.3.1"
serde = "1.0.123"
serde_derive = "1.0.123"
sha2 = "0.10.6"
uuid = { version = "1.3.3", features = [ "v4" ] }
